finalizando o jogo da cobrinha

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </head>
 
     <body>
+        <H1>SNAKE GAME</H1>
 
         <canvas id="snake" width="512" height="512"></canvas>
     </body>
